Global app updates

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "endOfLine": "lf",
-  "semi": false,
-  "singleQuote": false,
+  "useTabs": false,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "semi": true,
+  "printWidth": 120,
+  "jsxBracketSameLine": true,
+  "singleQuote": true,
+  "trailingComma": "all"
 }
