--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "gatsby": "^2.7.1",
+    "gatsby-image": "^2.2.8",
     "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sharp": "^2.2.11",
+    "gatsby-transformer-sharp": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1"
