Updates to handle multiple categories for a product

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@components": ["components/index"],
       "@components/*": ["components/*"],
-      "@assets/*": ["assets/*"]
+      "@assets/*": ["assets/*"],
+      "@models/*": ["models/*"]
     },
     "forceConsistentCasingInFileNames": true
   },
