--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   },
   "dependencies": {
+    "@types/react-helmet": "^5.0.15",
     "gatsby": "^2.7.1",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-react-helmet": "^3.1.3",
