--- a/package.json
+++ b/package.json
@@ -6,55 +6,55 @@
   "license": "MIT",
   "scripts": {
     "type-check": "tsc --noEmit",
-    "lint": "tslint --project .",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "dev": "gatsby develop",
     "build": "gatsby build",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run dev",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "serve": "gatsby serve"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn type-check && lint-staged && yarn format && git add ."
+      "pre-commit": "npm type-check && lint-staged && npm format && git add ."
     }
   },
   "dependencies": {
-    "@types/react-helmet": "^5.0.15",
-    "gatsby": "^2.7.1",
-    "gatsby-image": "^2.2.8",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sharp": "^2.2.11",
-    "gatsby-transformer-sharp": "^2.2.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "@types/react-helmet": "^6.0.0",
+    "gatsby": "^2.23.21",
+    "gatsby-image": "^2.4.12",
+    "gatsby-plugin-react-helmet": "^3.3.9",
+    "gatsby-plugin-sharp": "^2.6.18",
+    "gatsby-transformer-sharp": "^2.5.10",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "autoprefixer": "^9.5.1",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-tslint": "^0.0.2",
-    "gatsby-plugin-typescript": "^2.0.15",
-    "gatsby-source-filesystem": "^2.0.37",
-    "gatsby-transformer-remark": "^2.3.12",
-    "node-sass": "^4.12.0",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "add": "^2.0.6",
+    "autoprefixer": "^9.8.4",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "gatsby-plugin-sass": "^2.3.10",
+    "gatsby-plugin-typescript": "^2.4.13",
+    "gatsby-source-filesystem": "^2.3.18",
+    "gatsby-transformer-remark": "^2.8.23",
+    "node-sass": "^4.14.1",
     "postcss-focus": "^4.0.0",
-    "postcss-pxtorem": "^4.0.1",
+    "postcss-pxtorem": "^5.1.1",
     "postcss-vr": "^3.0.1",
-    "prettier": "^1.17.1",
-    "stylelint": "^10.1.0",
-    "stylelint-config-prettier": "^5.2.0",
+    "prettier": "^2.0.5",
+    "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-recommended": "^2.2.0",
+    "stylelint-config-recommended": "^3.0.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.17.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-loader": "^3.5.4",
-    "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.5.1"
+    "typescript": "^3.9.6"
   },
   "repository": {
     "type": "git",
